src/styl/layouts/header.styl
$header-height = 46px

html
  --header-height: 46px

.site-header
  position: fixed
  width: 100%
  z-index: 1000

#main-content
  padding-top: var(--header-height)
  min-height: 55vh

.site-header__wrapper
  height: var(--header-height)
  overflow: hidden
  display: flex
  align-items: center;

.site-header__toggle
  padding-right: .25rem

@media screen and (max-width: $breakpoint-m)
  .site-header__toggle
    padding-right: .5rem

.icon-large:before
  font-size: 1.4rem

@media screen and (max-width: $breakpoint-s)
  .site-header__toggle
    padding-top: 12px
    padding-bottom: 10px

  .header-main__middle
    margin-top: 12px
    margin-bottom: 10px

.site-header__navigation
  user-select: none

.site-header__logomark
  position: relative
  transition: opacity var(--transition-speed-medium)
  margin-top: 2px
  svg
    height: 19px
    width: 23px

.site-header__scroll-reveal
  opacity: 0
  transition: opacity var(--transition-speed-medium)
  position: absolute
  left: 0.5em
  right: 0.5em
  top: 0

.site-header__scroll-reveal-text
  display: inline-block
  max-width: 100%
  vertical-align: middle

// @media screen and (max-width: $breakpoint-xl)
//   html
//     --header-height: 46px

// @media screen and (max-width: $breakpoint-l)
//   html
//     --header-height: 46px

// @media screen and (max-width: $breakpoint-m)
//   html
//     --header-height: 46px

@media screen and (max-width: $breakpoint-s)
  html
    --header-height: 42px

  #menu-toggle, #search-toggle, #menu-logo
    padding: 0 2px
    .icon-menu:before
      margin: 0

  .site-header__logomark
    svg
      height: 15px
      width: 23px

// ******************************************************

// SITE NAV

.site-header-nav
  display: none
  a
    display: block
    padding: .25rem 0

@media screen and (max-width: $breakpoint-m)

  .site-header-nav
    height: unquote('calc(100vh - var(--header-height))')
    overflow-y: auto

// ******************************************************

// SEARCH

.site-header-search
  display: none

